--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Recipes Assignment</title>
+    <link rel="stylesheet" href="recipe-page.css">
 </head>
 
 <body>
@@ -10,7 +11,7 @@
     <ul>
         <li><a href="recipes/steak.html">Pan Seared Steak</a></li>
         <li><a href="recipes/beefstew.html">Old Fashioned Beef Stew</a></li>
-        <li><a href="recipes/waffles.html"></a>Diner Style Waffles</li>
+        <li><a href="recipes/waffles.html">Diner Style Waffles</a></li>
     </ul>
 </body>
 
