--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/steak.html">Pan Seared Steak</a></li>
-        <li><a href="recipes/beefstew.html">Old Fashioned Beef Stew</a></li>
-        <li><a href="recipes/waffles.html">Diner Style Waffles</a></li>
-    </ul>
+    <div class="box">
+        <h1 class="title">Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/steak.html">Pan Seared Steak</a></li>
+            <li><a href="recipes/beefstew.html">Old Fashioned Beef Stew</a></li>
+            <li><a href="recipes/waffles.html">Diner Style Waffles</a></li>
+        </ul> 
+    </div>
 </body>
 
 </html>
